--- a/static/home.css
+++ b/static/home.css
@@ -1268,12 +1268,16 @@ nav .breadcrumb li a:hover{
 }
 .tech-details{
 	margin-top: 50px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 .tech-details p{
 	line-height: 45px;
 	font-size: 15.5px;
 	text-align: justify;
-	padding: 20px 20px;
+	padding: 10px;
+	width: 100%;
 }  
 .pro-details{
 	margin-top: 50px;
@@ -2932,6 +2936,13 @@ nav .pagination a:hover{
 		width: 50%;
 		height: 40vh;
 	}
+	.folio img{
+		width: 100%;
+		height: 80vh;
+	}
+	.tech-details p{
+		width: 100%;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		991px
@@ -3346,6 +3357,13 @@ nav .pagination a:hover{
 		width: 50%;
 		height: 40vh;
 	}
+	.folio img{
+		width: 100%;
+		height: 65vh;
+	}
+	.tech-details p{
+		width: 100%;
+	}
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		767px
@@ -3732,6 +3750,13 @@ nav .pagination a:hover{
 	.pro-details img{
 		width: 50%;
 		height: 40vh;
+	}
+	.folio img{
+		width: 100%;
+		height: 50vh;
+	}
+	.tech-details p{
+		width: 100%;
 	}
 }
 /*--------------------------------------------------------------
@@ -4150,6 +4175,13 @@ nav .pagination a:hover{
 	.pro-details img{
 		width: 50%;
 		height: 40vh;
+	}
+	.folio img{
+		width: 100%;
+		height: 50vh;
+	}
+	.tech-details p{
+		width: 100%;
 	}
 }
 /*--------------------------------------------------------------
@@ -4592,6 +4624,13 @@ nav .pagination a:hover{
 	.pro-details img{
 		width: 50%;
 		height: 40vh;
+	}
+	.folio img{
+		width: 100%;
+		height: 50vh;
+	}
+	.tech-details p{
+		width: 100%;
 	}
 }
 /*--------------------------------------------------------------
@@ -5074,6 +5113,13 @@ nav .pagination a:hover{
 	.pro-details img{
 		width: 50%;
 		height: 40vh;
+	}
+	.folio img{
+		width: 100%;
+		height: 45vh;
+	}
+	.tech-details p{
+		width: 100%;
 	}
 }
 /*--------------------------------------------------------------
