--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -33,15 +33,17 @@
                 </div>
             </div>
             <p>     
-                Greensource Energy Consult is an emerging alternative energy company. Starting has a side hustle and incorporated with the
-                Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting edge innovation
-                to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated over 50KW of
-                energy for both off-grid and grid connected systems application. We offer a full-service portfolio for solar projects which
-                includes advisory, procurement, design, installation, engineering, operations and maintenance, this is made possible by our
-                enthusiastic and highly qualified installation team.<br /> A solid client centered methodology and a constant journey to achieve
-                world class quality is empowering us to get desired relevance in this line of business. Our goal is to enable our clients
-                use clean vitality and appreciate free power from the sun. It is our responsibility to give extraordinary consumer loyalty
-                and administration to each part of your solar investment with us.
+                 Greensource Energy Consult is an emerging alternative energy company. Greensource started not only to bridge the gap in
+                electricity shortfall we experience but also to provide quality innovative solar solution at optimum price that suits everyone.
+                It was Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting
+                edge innovation to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated
+                over 50KW of energy for both off-grid and grid connected systems application. We offer a full-service portfolio for solar
+                projects which includes advisory, procurement, design, installation, engineering, operations and maintenance, this is made
+                possible by our enthusiastic and highly qualified installation team.
+                <br /> A solid client centered methodology and a constant journey to achieve world class quality is empowering us to get desired
+                relevance in this line of business. Our goal is to enable our clients use clean vitality and appreciate free power from the
+                sun. It is our responsibility to give extraordinary consumer loyalty and administration to each part of your solar investment
+                with us.
             </p>
         </div>
     </div>
