--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -11,7 +11,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/homepage2.webp' %}" alt="array of roof mounted solar panels">
+            <img src="{% static 'images/a.jpg' %}" alt="array of roof mounted solar panels">
             <div class="carousel-caption">
                 <h1 class="animated zoomIn">INNOVATIVE
                     <span>SOLAR</span> SOLUTION</h1>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/homepage1.webp' %}" alt="array of ground mounted solar panels ">
+            <img src="{% static 'images/a3.jpg' %}" alt="array of ground mounted solar panels ">
             <div class="carousel-caption">
                 <h2 class="animated zoomIn">CLEAN.
                     <span>SAFE.</span> RENEWABLE.</h2>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/homepage3.webp' %}" alt="office space powered by a solar system">
+            <img src="{% static 'images/a2.jpg' %}" alt="office space powered by a solar system">
             <div class="carousel-caption">
                 <h2 class="animated zoomIn">RELIABLE.
                     <span>GREEN.</span> FITS THE BILL.</h2>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="choose3">
                     <img src="{% static 'images/profits.png' %}" alt="img" />
-                    <h6>Fits the Bill !</h6>
+                    <h6>Money Saving!</h6>
                 </div>
             </div>
         </div>
@@ -156,10 +156,11 @@
             </div>
             <div class="abt-info col-lg-6 col-md-6 col-xs-12">
                 <p class="active">
-                Greensource Energy Consult is an emerging alternative energy company. Starting has a side hustle and incorporated with the
-                Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting edge innovation
-                to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated over 50KW of
-                energy for both off-grid and grid connected systems application...
+                 Greensource Energy Consult is an emerging alternative energy company. Greensource started not only to bridge the gap in
+                electricity shortfall we experience but also to provide quality innovative solar solution at optimum price that suits everyone.
+                It was incorporated with the Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators,
+                implementing cutting edge innovation to provide decentralized renewable energy systems for homes and businesses. Since inception
+                we have generated over 50KW of energy for both off-grid and grid connected systems application...
                 </p>
                 <a href="{% url 'about' %}">Read More</a>
                 <div class="xtravite">
@@ -345,109 +346,113 @@
             <div class="row owl-carousel owl-theme" id="pricing">
                 <div class="item">
                     <div class="table">
-                        <h6>mini 1</h6>
+                        <h6>gs 0.32kwp</h6>
                         <div class="prices">
-                            N262, 000
+                            N270, 000
                             <span>
-                                <strong>360w</strong> Module
+                                <strong>2* 180w</strong> Mono Panels
                                 <br />
-                                <strong>1kw</strong> Inverter
+                                <strong>1* 40amp</strong> Controller
                                 <br />
-                                <strong>100ah</strong> Battery
+                                <strong>1* 150ah</strong> Gel Battery
                                 <br />
-                                <strong>30amp</strong> Controller</span>
+                                <strong>1* 1kw</strong> Field-effect Inverter
+                            </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                <strong>1</strong> Mini TV</li>
+                                All lighting (LEDs recommended)</li>
                             <li>
-                                <strong>1</strong> Fan &nbsp;Laptop</li>
+                                A 24/32 inches television</li>
                             <li>
-                                <strong>All</strong> Light points</li>
+                                A ceiling/standing Fan</li>
                             <li>
-                                <strong></strong> Decoder</li>
+                                A satelite decoder</li>
                         </ul>
                     </div>
                 </div>
                 <div class="item">
                     <div class="table">
-                        <h6>mini 2</h6>
+                        <h6>gs 0.54kwp</h6>
                         <div class="prices">
                             N342, 000
                             <span>
-                                <strong>540w</strong> Module
+                                <strong>3* 180w </strong> Mono Panels
                                 <br />
-                                <strong>1kw</strong> Inverter
+                                <strong>1* 40amp</strong> Controller
                                 <br />
-                                <strong>150ah</strong> Battery
+                                <strong>1* 200ah</strong> Gel Battery
                                 <br />
-                                <strong>40amp</strong> Controller</span>
+                                <strong>1* 1.5kw</strong> Field-effect Inverter
+                            </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                <strong>1</strong> Mini TV</li>
+                                All lighting (LEDs recommended)</li>
                             <li>
-                                <strong>1</strong> Fan &nbsp;Laptop</li>
+                                One(1) 32 inches television</li>
                             <li>
-                                <strong>All</strong> Light points</li>
+                                A ceiling/standing Fan</li>
                             <li>
-                                <strong></strong> Decoder</li>
+                                A home theatre/satelite decoder</li>
                         </ul>
                     </div>
                 </div>
                 <div class="item">
                     <div class="table">
-                        <h6>mini 3</h6>
+                        <h6>gs 0.72kwp</h6>
                         <div class="prices">
-                            N460,000
+                            N460, 000
                             <span>
-                                <strong>900w</strong> Module
+                                <strong>4* 180w </strong> Mono Panels
                                 <br />
-                                <strong>2kw</strong> Inverter
+                                <strong>1* 50amp</strong> Controller
                                 <br />
-                                <strong>200ah</strong> Battery
+                                <strong>1* 200ah</strong> Gel Battery
                                 <br />
-                                <strong>50amp</strong> Controller</span>
+                                <strong>1* 2kw</strong> Field-effect Inverter
+                            </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                <strong>1</strong> TV</li>
+                                All lighting (LEDs recommended)</li>
                             <li>
-                                <strong></strong> Fans &nbsp;Laptops</li>
+                                One(1) 43 inches television</li>
                             <li>
-                                <strong>All</strong> Light points</li>
+                                 Two (2) ceiling/standing Fan</li>
                             <li>
-                                <strong></strong> Decoder/Home theater</li>
+                                A home theatre/satelite decoder</li>
                         </ul>
                     </div>
                 </div>
                 <div class="item">
                     <div class="table">
-                        <h6>mini 4</h6>
+                        <h6>gs 1.08kwp</h6>
                         <div class="prices">
-                            N595, 000
+                            N590, 000
                             <span>
-                                <strong>1.08kw</strong> Module
+                                <strong>6* 180w </strong> Mono Panels
                                 <br />
-                                <strong>2kw</strong> Inverter
+                                <strong>1* 50amp</strong> Controller
                                 <br />
-                                <strong>300ah</strong> battery
+                                <strong>2* 150ah</strong> Gel Battery
                                 <br />
-                                <strong>50amp</strong> controller</span>
+                                <strong>1* 2kw</strong> Field-effect Inverter
+                            </span>
                         </div>
                         <ul>
                             <p>load capacity</p>
                             <li>
-                                <strong>1</strong> TV</li>
+                                All lighting (LEDs recommended)</li>
                             <li>
-                                <strong></strong> Fans &nbsp;Laptops</li>
+                                One(1) 43 inches television</li>
                             <li>
-                                <strong>All</strong> Light points</li>
+                                Two (2) ceiling/standing Fan</li>
                             <li>
-                                <strong></strong> Decoder/Home theater</li>
+                                A home theatre/satelite decoder</li>
                         </ul>
                     </div>
                 </div>
