--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -333,14 +333,14 @@
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
-              "@type": "ProfessionalService",
+              "@type": "Energy Service",
               "name": "Greensource Energy Consult",
               "image": "https://greensourcenergy.com/static/images/greensourcelogo4.webp",
               "url": "https://www.greensourcenergy.com",
               "telephone": "(234)913 2909 546 | (234)807 6068 609",
               "address": {
                 "@type": "PostalAddress",
-                "streetAddress": "1 heritage street btanobi noah, arogun",
+                "streetAddress": "1 heritage street by anobi noah, arogun",
                 "addressLocality": "mowe-ofada",
                 "addressRegion":"OG"
                 "addressCountry": "NG"  
@@ -357,7 +357,7 @@
       "enabled":true,
       "chatButtonSetting":{
           "backgroundColor":"#006420",
-          "ctaText":"",
+          "ctaText":"live chat",
           "borderRadius":"25",
           "marginLeft":"0",
           "marginBottom":"55",
@@ -367,8 +367,8 @@
       "brandSetting":{
           "brandName":"GREENSOURCE ENERGY",
           "brandSubTitle":"Reliable, Fits the bill !",
-          "brandImg":"https://www.greensourcenergy.com/static/images/ceo.webp",
-          "welcomeText":"Hello!\nHow can we help you today?",
+          "brandImg":"https://www.greensourcenergy.com/static/images/greensource2.png",
+          "welcomeText":"Thank you for contacting GREENSOURCE ENERGY! My name is OLUMDE\nHow can i help you today?",
           "messageText":"Hello, I have a question.",
           "backgroundColor":"#006420",
           "ctaText":"Send Message",
@@ -383,17 +383,6 @@
         var x = document.getElementsByTagName('script')[0];
         x.parentNode.insertBefore(s, x);
     </script> 
-    <script type="text/javascript">
-        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-        (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/60599a8f067c2605c0bb4404/1f1f07ha0';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-        })();
-    </script>
     </body>
 </html>
 
