--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -33,18 +33,16 @@
                 </div>
             </div>
             <p>     
-                 Greensource Energy Consult is an emerging alternative energy company. Greensource started not only to bridge the gap in
-                electricity shortfall we experience but also to provide quality innovative solar solution at optimum price that suits everyone.
-                It was Corporate Affairs Commission in 2018, we are steadily rising to be one of the main creators, implementing cutting
-                edge innovation to provide decentralized renewable energy systems for homes and businesses. Since inception we have generated
-                over 50KW of energy for both off-grid and grid connected systems application. We offer a full-service portfolio for solar
-                projects which includes advisory, procurement, design, installation, engineering, operations and maintenance, this is made
-                possible by our enthusiastic and highly qualified installation team.
-                <br /> A solid client centered methodology and a constant journey to achieve world class quality is empowering us to get desired
-                relevance in this line of business. Our goal is to enable our clients use clean vitality and appreciate free power from the
-                sun. It is our responsibility to give extraordinary consumer loyalty and administration to each part of your solar investment
-                with us.
+                Greensource Energy Consult is an end-to-end customer service oriented solar energy company, centered on Off-Grid, On-Grid,
+                Energy storage, Street-lighting and Solar borehole in Nigeria and the rest of Africa. We are on a mission to reduce energy
+                crisis experienced in Africa providing innovative and clean energy solutions to our clients. We are an emerging company with
+                over 4 years in the field of clean energy, with more focus on Solar Photovoltaic Systems. A solid client centered methodology
+                and a constant journey to achieve world class quality is empowering us to get desired relevance in this line of business.
+                We are committed to bring homes and businesses a natural source of clean energy, contributing to reduce global pollution
+                and carbon footprints. We are providing Analysis, Installation, Operations and Maintenance in the Nigerian market to ensure
+                clients get Quality products and services while ensuring value for money invested in renewable energy.
             </p>
+            <a href="{% url 'contact_us' %}">Contact Us</a>
         </div>
     </div>
 </div>
@@ -57,54 +55,34 @@
         </div>
     </div>
     <div class="container padding">
-        <div class="card-cover row owl-carousel owl-theme" id="mission">
+        <div class="mission row owl-carousel owl-theme padding" id="mission">
             <div class="item">
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <p>Our mission is to promote, research and invest in clean and renewable energy technologies, energy
-                                conservation, energy efficiency and sustainable energy enterprise that benefits everyone.</p>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>mission</h2>
-                    </div>
+                <div class="values">
+                    <h4>Mission</h4>
+                    <p>Our mission is to promote renewable energy technologies,
+                    energy efficiency and sustainable energy that benefits everyone.</p>
                 </div>
             </div>
             <div class="item">
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <ul class="create">
-                                <li>Customer Centric</li>
-                                <li>Reliability</li>
-                                <li>Integrity</li>
-                                <li>Accountability</li>
-                                <li>Teamwork</li>
-                                <li>Education</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>values</h2>
-                    </div>
+                <div class="values">
+                    <h4>Core Values</h4>
+                    <ul class="create">
+                        <li>Customer Centric</li>
+                        <li>Reliability</li>
+                        <li>Integrity</li>
+                        <li>Teamwork</li>
+                        <li>Education</li>
+                    </ul>
                 </div>
             </div>
             <div class="item">
-                <div class="card">
-                    <div class="face face1">
-                        <div clas="content">
-                            <p>Our vision is to build a sustainable energy future, providing solutions to manage energy, environmental
-                                sustainability and economic development.</p>
-                        </div>
-                    </div>
-                    <div class="face face2">
-                        <h2>vision</h2>
-                    </div>
+                <div class="values">
+                    <h4>Vision</h4>
+                    <p>Our vision is to build a sustainable energy future, providing solutions to manage energy and environmental
+                        sustainability</p>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
 <div class="container-fluid padding">
