--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -21,6 +21,12 @@
         <li class="breadcrumb-item active" aria-current="page">Our-Team</li>
     </ol>
 </nav>
+<div class="container padding">
+    <div class="row team-heading padding">
+            <p>Our team is committed to creating value for its clients and customers through developing and providing the best guidance
+            in renewable energy projects. Aided by the experience technical team and its expereince in various emerging markets.</p>
+    </div>
+</div>
 <section id="team">
     <div class="team-box-container">
         <div class="member-box member-1">
