--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,21 +8,21 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="2 days" />
-    <meta name="description" content="Alternative source of power for homes and businesses? Greensource Energy focuses on design and installation solar energy systems harnessing the power of the sun. Contact us now!"/>
-    <meta name="keywords" content="solar system, solar panel, solar panel installation, solar energy, solar, solar inverter, solar panel price in nigeria, solar battery, solar street light, 
+    <meta name="description" content="Alternative source of power for homes and businesses harnessing the power of the sun? Solar panel design, installation, operation and maintenance. Contact us now!"/>
+    <meta name="keywords" content="solar panel, solar panels, solar panels installation, solar panels repairs, solar panels maintenance, solar panels design solar Photovoltaic, solar energy, solar, solar inverter, solar home systems, solar panel price in nigeria, solar battery, solar street light, 
     solar power system, solar inverter installation, solar lighting system, renewable energy, solar companies in ogun, solar companies in lagos, solar business in nigeria, solar quotes, green energy, energy sources, alternative energy"/>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="greensourcenergy.com" />
     <meta name="twitter:creator" content="@greenn_energy" />
     <meta name="twitter:title" content="Solar Energy for Homes and Businesses" />
-    <meta name="twitter:description" content="Alternative source of power for homes and businesses? Greensource Energy focuses on design and installation solar energy systems harnessing the power of the sun. Contact us now!" />
+    <meta name="twitter:description" content="Alternative source of power for homes and businesses harnessing the power of the sun? Solar panel design, installation, operation and maintenance. Contact us now!" />
     <meta name="twitter:image:src" content="greensourcenergy.com/static/images/homepage2.webp" />
-    <meta property="og:title" content="Solar Energy for Homes and Businesses - Greensource Energy" />
+    <meta property="og:title" content="We harness the sun to power Homes and Businesses - Greensource Energy" />
     <meta property="og:url" content="https://greensourcenergy.com" />
     <meta property="og:site_name" content="Greensource Energy" />
     <meta property="og:image" content="https://greensourcenergy.com/static/images/greensourceelogo4.webp" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Alternative source of power for homes and businesses? Greensource Energy focuses on design and installation solar energy systems harnessing the power of the sun. Contact us now!"/>
+    <meta property="og:description" content="Alternative source of power for homes and businesses harnessing the power of the sun? Solar panel design, installation, operation and maintenance. Contact us now!"/>
     <title>{% block title %}- Greensource Energy {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'home.css' %}" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />     
@@ -54,7 +54,7 @@
 </div>
 <div class="site-navbar-wrap">
     <div class="site-navbar-top">
-        <div class="container py-3">
+        <div class="container-fluid py-3">
             <div class="row align-items-center">
                 <div class="col-7">
                     <div class="d-flex mr-auto">
@@ -357,7 +357,7 @@
       "enabled":true,
       "chatButtonSetting":{
           "backgroundColor":"#006420",
-          "ctaText":"live chat",
+          "ctaText":"",
           "borderRadius":"25",
           "marginLeft":"0",
           "marginBottom":"55",
