--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -1,8 +1,5 @@
-{% extends 'base_layout.html' %}
-{% block nav-home %} active {% endblock %}
-{% load static %}
-{% block title %}Solar Energy for Homes and Businesses {{ block.super }}{% endblock %}
-{% block content %}
+{% extends 'base_layout.html' %} {% block nav-home %} active {% endblock %} {% load static %} {% block title %}Solar Energy
+for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="carouselExampleFade" data-slide-to="0" class="active"></li>
@@ -11,10 +8,10 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{% static 'images/a.jpg' %}" alt="array of roof mounted solar panels">
+            <img src="{% static 'images/aa.jpg' %}" alt="off-grid solar panels">
             <div class="carousel-caption">
-                <h1 class="animated zoomIn">INNOVATIVE
-                    <span>SOLAR</span> SOLUTION</h1>
+                <h1 class="animated zoomIn">MAKE THE
+                    <span>SUN</span> WORK FOR YOU</h1>
                 <h3 class="animated fadeInUp">Driving the Transition to Sustainable Energy Solutions</h3>
                 <div class="button animated fadeInDown">
                     <a class="btn active" href="{% url 'services' %}" role="button">Our Services</a>
@@ -23,7 +20,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/a3.jpg' %}" alt="array of ground mounted solar panels ">
+            <img src="{% static 'images/aaa.jpg' %}" alt="array of ground mounted solar panels ">
             <div class="carousel-caption">
                 <h2 class="animated zoomIn">CLEAN.
                     <span>SAFE.</span> RENEWABLE.</h2>
@@ -35,11 +32,11 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="{% static 'images/a2.jpg' %}" alt="office space powered by a solar system">
+            <img src="{% static 'images/a.jpg' %}" alt="office space powered by a solar system">
             <div class="carousel-caption">
-                <h2 class="animated zoomIn">RELIABLE.
-                    <span>GREEN.</span> FITS THE BILL.</h2>
-                <h3 class="animated fadeInUp">We want to see Everyone Benefit from the use of Green Energy.</h3>
+                <h2 class="animated zoomIn">
+                    <span>GREEN</span> ENERGY FOR EVERYONE</h2>
+                <h3 class="animated fadeInUp">We want to see Everyone Benefit from the use solar energy.</h3>
                 <div class="button animated fadeInDown">
                     <a class="btn active" href="{% url 'services' %}" role="button">Our Services</a>
                     <a class="btn" href="{% url 'about' %}" role="button">More About Us!</a>
@@ -86,42 +83,26 @@
 </div>
 <section>
     <div class="container-fluid padding">
-        <div class="service col-12">
-            <h5>Why choose Us</h5>
-            <hr />
-            <p>a strong team with a strong background</p>
+        <div class="service-two col-12">
+            <h5>
+                <i class="fas fa-long-arrow-alt-right"></i>Why Choose</h5>
+            <p>Solar Home Systems</p>
         </div>
     </div>
     <div class="container padding">
-        <div class="row padding">
+        <div class="row bg padding">
             <div class="choose col-lg-6 col-md-12 col-xs-12">
-                <div class="choose-body">
-                    <div>
-                        <i class="fas fa-check"></i>
-                    </div>
-                    <h6>Innovative Energy Solutions</h6>
-                    <p>Vast experience in design, installation, operations and maintenance.</p>
-                </div>
-                <div class="choose-body">
-                    <div>
-                        <i class="fas fa-check"></i>
-                    </div>
-                    <h6>Client Satisfaction</h6>
-                    <p>End-to-end customer relationships and strategic partnerships, delivering optimum services.</p>
-                </div>
-                <div class="choose-body">
-                    <div>
-                        <i class="fas fa-check"></i>
-                    </div>
-                    <h6>Optimal services</h6>
-                    <p>A perfect blend of on-field and off-field experience, delivering optimum services all the way.</p>
-                </div>
-                <div class="choose-body">
-                    <div>
-                        <i class="fas fa-check"></i>
-                    </div>
-                    <h6>Smart Work Delivery</h6>
-                    <p>We use human centered design using regulatory best practice to improve services.</p>
+                <div class="why-choose">
+                    <p>
+                        Whether you are a home owner, business or nonprofits, electricity costs can make up a large portion of your monthly expenses.
+                        Solar will reduce your utility bills, saving you alot of money. With the rising cost of electicity
+                        due to increase in tariff and fuel cost, harnessing the power of the sun is now more needed than
+                        ever.
+                        <br/>
+                        <strong>Solar Modules:</strong> Produce electicity even on cloudy days, usually around 20% - 30%.
+                        <br/>
+                        <strong>Low Maintenance:</strong> This is because there are no moving parts (mechanical) in the solar system.
+                    </p>
                 </div>
             </div>
             <div class="people-one col-lg-6 col-md-6 col-xs-12">
@@ -142,59 +123,52 @@
     </div>
 </section>
 <section>
-    <div class="container-fluid padding">
-        <div class="service col-12">
-            <h5>Who We are</h5>
-            <hr />
-            <p>What we are about and stand for</p>
+    <div class="container-fluid-bg padding">
+        <div class="service-two col-12">
+            <h5>
+                <i class="fas fa-long-arrow-alt-right"></i>OUR CORE</h5>
+            <p>Focal Point of our Work</p>
         </div>
-    </div>
-    <div class="container padding">
-        <div class="about row padding">
-            <div class="wow fadeIn col-lg-6 col-md-6 col-xs-12" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
-                <img src="{% static 'images/abt.webp' %}" class="img-fluid" alt="rooftop installation" />
+        <div class="row works owl-carousel owl-theme padding" id="core">
+            <div class="item">
+                <div class="sub-work">
+                    <i class="fas fa-line-chart"></i>
+                    <h4>Analysis</h4>
+                    <p>we carry out load analysis to dertermine the best solar option that fits individual clients</p>
+                </div>
             </div>
-            <div class="abt-info col-lg-6 col-md-6 col-xs-12">
-                <p class="active">
-                    Greensource Energy Consult is an emerging alternative energy company. Greensource started not only to bridge the gap in electricity
-                    shortfall we experience but also to provide quality innovative solar solution at optimum price that suits
-                    everyone. It was incorporated with the Corporate Affairs Commission in 2018, we are steadily rising to
-                    be one of the main creators, implementing cutting edge innovation to provide decentralized renewable
-                    energy systems for homes and businesses. Since inception we have generated over 50KW of energy for both
-                    off-grid and grid connected systems application...
-                </p>
-                <a href="{% url 'about' %}">Read More</a>
-                <div class="xtravite">
-                    <div class="xvite">
-                        <div>
-                            <i class="fas fa-check"></i>
-                        </div>
-                        <div>
-                            <p>Reliability, Performance, Efficiency!</p>
-                        </div>
-                    </div>
-                    <div class="xvite">
-                        <div>
-                            <i class="fas fa-check"></i>
-                        </div>
-                        <div>
-                            <p>Green, Sustainable, Fits the bill!</p>
-                        </div>
-                    </div>
+            <div class="item">
+                <div class="sub-work">
+                    <i class="fas fa-cogs"></i>
+                    <h4>Engineering</h4>
+                    <p>We believe standard engineering procedure ensure quality assurance during installations</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="sub-work">
+                    <i class="fas fa-puzzle-piece"></i>
+                    <h4>Operations</h4>
+                    <p>Standard operations procedure are designed to ensure our solar systems performs optimally</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="sub-work">
+                    <i class="fas fa-tools"></i>
+                    <h4>Maintenance</h4>
+                    <p>Planned Maintenance and retrofit makes the life span of any system last longer than expected</p>
                 </div>
             </div>
         </div>
-    </div>
 </section>
 <section>
-    <div class="container-fluid padding">
+    <div class="container padding">
         <div class="service col-12">
             <h5>Our Services</h5>
             <hr />
             <p>Our Range of Solar Services</p>
         </div>
     </div>
-    <div class="container-fluid padding">
+    <div class="container padding">
         <div class="owl-carousel service-style-one" id="services">
             <div class="item">
                 <div class="single-service-style-three">
@@ -209,7 +183,6 @@
                         <a href="{% url 'solar_design' %}" class="read-more">Read More</a>
                     </div>
                 </div>
-
             </div>
             <div class="item">
                 <div class="single-service-style-three">
@@ -326,9 +299,8 @@
         </div>
     </div>
 </section>
-
 <section>
-    <div class="container padding">
+    <div class="container-fluid padding">
         <div class="service-two col-12">
             <h5>
                 <i class="fas fa-long-arrow-alt-right"></i>Our Pricing</h5>
@@ -548,7 +520,7 @@
                 <img src="{% static 'images/brand-1-4.png' %}" alt="img" />
             </div>
             <div class="item">
-                <img src="{% static 'images/brand-1-2.png' %}" alt="img" />
+                <img src="{% static 'images/brand-1-5.png' %}" alt="img" />
             </div>
         </div>
     </div>
